--- a/src/index.css
+++ b/src/index.css
@@ -25,36 +25,6 @@
     --ring: 224.3 76.3% 48%;
     --radius: 0.5rem;
   }
-
-  .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-  }
 }
 
 @layer base {
@@ -63,11 +33,6 @@
   }
   body {
     @apply bg-background text-foreground;
-  }
-  .hero {
-    background-image: url("/public/hero-3.png");
-    background-position: center;
-    background-size: cover;
   }
   h1 {
     @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
@@ -80,6 +45,12 @@
   }
   p {
     @apply leading-7 [&:not(:first-child)]:mt-6;
+  }
+
+  .hero {
+    background: url("/hero-3.png");
+    background-position: center;
+    background-size: cover;
   }
 }
 
